  * Replace spaces with dashes in license ids, for all SPDX license
    names. Closes: #942722
  * Update standards version to 4.4.1, no changes needed.
  * Remove unnecessary 'git' usernames from salsa and github URLs.
  * Fix including branch names for GitHub URLs.
  * Don't remove Built-Using variables that are unrelated to go.
  * Support more complex alioth URLs.

 -- Jelmer Vernooĳ <jelmer@debian.org>  Wed, 23 Oct 2019 02:13:20 +0000

lintian-brush (0.38) unstable; urgency=medium

  * Add missing dependency on libdebhelper-perl for autopkgtest.
  * Add support for bumping to standards version 4.4.1.
  * Support replacing deprecated --same-arch with --arch.
  * copyright-continued-lines-with-space: allow copyright file to be
    missing.
  * Fix test_changelog reproducibility.

 -- Jelmer Vernooĳ <jelmer@debian.org>  Sat, 19 Oct 2019 15:21:53 +0000

lintian-brush (0.37) unstable; urgency=medium

  * package-uses-deprecated-debhelper-compat-version: Add
    --buildsystem=pybuild when upgrading Python packages to debhelper 12.
  * Add various more aliases for salsa team names.

 -- Jelmer Vernooĳ <jelmer@debian.org>  Fri, 18 Oct 2019 17:34:35 +0000

lintian-brush (0.36) unstable; urgency=medium

  * debian-control-has-unusual-field-spacing: don't update files with
    unknown template types.
  * Support parsing some more format salsa URLs.
  * Add pkg-sugar, pkg-phototools, pkg-netmeasure, pkg-hamradio, pkg-sass
    alias.
  * Ignore broken package.xml files.
  * copyright-continued-lines-with-space: Ignore missing copyright
    files.
  * debian-control-has-obsolete-dbg-package: support cdbs if dbg package
    is added with debhelper.

 -- Jelmer Vernooĳ <jelmer@debian.org>  Tue, 15 Oct 2019 09:34:25 +0000

lintian-brush (0.35) unstable; urgency=medium

  * Fix handling of dictionaries for the 'repository' field in META.yml.
  * debian-control-has-obsolete-dbg-package: Don't bump debhelper
    version unless there are -dbg packages.