@@ -10,6 +10,7 @@ lintian-brush (0.39) UNRELEASED; urgency=medium
   * Fix including branch names for GitHub URLs.
   * Don't remove Built-Using variables that are unrelated to go.
   * Support more complex alioth URLs.
+  * Support updating non-trivial debhelper dependencies.
 
  -- Jelmer Vernooĳ <jelmer@debian.org>  Wed, 23 Oct 2019 02:13:20 +0000
 
